# lab_07.1_rec

./: CMakeLists.txt  README.md
include/: main.h
src/: h.cpp  main.cpp
tests/: test_h.cpp
